--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <body>
     <h1>Tanquesitos</h1>
 
-    <canvas>
+    <div>
+      <h2><button>Play</button></h2>
+    </div>
+    <canvas id="myCanvas">
 
     </canvas>
     <script src="app.js"></script>
